--- a/META.yml
+++ b/META.yml
@@ -13,10 +13,11 @@ meta-spec:
   version: 1.4
 name: Validation-Class-Document
 requires:
+  Clone: 0
   Hash::Flatten: 0
-  Validation::Class: 0
+  Validation::Class: 7.900041
 resources:
   bugtracker: https://github.com/alnewkirk/Validation-Class-Document/issues
   homepage: https://github.com/alnewkirk/Validation-Class-Document
   repository: git://github.com/alnewkirk/Validation-Class-Document.git
-version: 0.000012
+version: 0.000013
